# Probability-prediction-engine

./: .dockerignore  .env.example  .env.mcp.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Caddyfile  Caddyfile.tls  DESKTOP_AUTO_START.cmd  DESKTOP_AUTO_STOP.cmd  DESKTOP_BUILD.cmd  DESKTOP_BUILD_CLIPBOARD.cmd  DESKTOP_CONTINUE.cmd  DESKTOP_STOP.cmd  DESKTOP_VM_MAINTAIN.cmd  DESKTOP_VM_STATUS.cmd  DESKTOP_ZERO_CLICK_START.cmd  DESKTOP_ZERO_CLICK_STOP.cmd  DO_THE_THING.cmd  Dockerfile  FIND_PPE_FOLDER.cmd  OPEN_MODULE_MAP.cmd  Probability prediction engine - Shortcut.lnk  README.md  STUCK_RUN_LOCAL_WATCH.cmd  VM_AUTO.cmd  VM_HYGIENE.cmd  VM_OPERATOR_README.txt  VM_RESTART.cmd  VM_START.cmd  VM_STATUS.cmd  VM_STOP.cmd  VM_UPDATE.cmd  VM_WATCHDOG.cmd  auth_google_docs_mcp.cmd  bootstrap_operator_pair.cmd  call_ppe_operator_local.cmd  check_ide_build_automation.cmd  check_vm_loop.cmd  clear_build_worker_quota.cmd  (+165 more)
.cursor/: IDE_BUILD_AUTOMATION_PROMPT.md  IDE_BUILD_TRIGGER.json  USER_RULES_GIT_SNIPPET.md  hooks.json  mcp.json  permissions.json
.github/: dependabot.yml
.streamlit/: config.toml
caddy/: snippets.caddy
certs/: README.md
config/: asset_venue_source_map.yaml  assets.yaml  assets_tier1_manifest.yaml  assets_tier2_manifest.yaml  autobuilder_project_contract.v1.yaml  exposure_path_catalog.yaml  founder_pipeline_registry.json  operator_program_queue.yaml  research_pipeline_registry.json  sources.yaml
docs/: ARCHITECTURE.md  ARCHITECT_NOTES.md  CHART_UNIFIED_PLAN.md  CONTEXT_RULES  CONTEXT_RULES.md  CONTRACTS.md  CONTRIBUTING.md  CURRENT_FRONTIER.md  PLAN.md  (+10 more)
(+1856 files in other folders)
