[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probability-prediction-engine"
version = "0.1.0"
description = "Probability Prediction Engine"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "yfinance>=0.2.28",
  "requests>=2.31.0",
  "streamlit>=1.28.0",
  "plotly>=5.18.0",
  "playwright",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

