[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probability-prediction-engine"
version = "0.1.0"
description = "Probability Prediction Engine"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "yfinance>=0.2.28",
  "requests>=2.31.0",
  "streamlit>=1.33.0",
  "plotly>=5.18.0",
  "playwright",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "witness: charter/closeout evidence (CI + pre-push full gate)",
  "slow: subprocess/git-heavy tests (CI + pre-push full gate)",
]

